--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -717,11 +717,21 @@ margin-bottom: 60px;
 
 
 #secondary_wrapper {
-    top: 0px;
-min-width: 1200px; 
-margin: auto;
-padding: 15px;
-padding-top: 0px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(100% - 350px);
+     min-width: 1200px; 
+    min-height: 100vh;
+     margin: auto;
+    padding: 40px;
+     padding-top: 0px;
+    transition: all 0.3s;
+}
+
+
+#secondary_wrapper.active {
+    width: 100%;
 }
 
 
@@ -906,6 +916,226 @@ cursor: pointer;
 #alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, #sys_stats_admin_link_info, #header_size_warning, .hidden {
 display: none;
 }
+
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+
+#sidebar_hamburger {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    cursor: pointer;
+    z-index: 5;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+
+#sidebar {
+    width: 350px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    transition: all 0.3s;
+}
+
+
+#sidebar.active {
+    margin-left: -350px;
+}
+
+
+#sidebar #sb_alerts {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    position: absolute;
+    top: 9px;
+    left: 5px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+
+#sidebar .plus_minus {
+width: 155px;
+  margin-top: 11px;
+  margin-left: 92px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+
+#sidebar .plus_minus_buttons {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+
+#sidebar label.pl_mn_lab {
+color: red;
+transform: scale(.85) translateY(0rem) translateX(0.66rem);
+padding: 0rem;
+}
+
+
+#sidebar #quant_font_percent {
+height: calc(1.5rem + calc(var(--bs-border-width) * 2));
+    padding-left: 1.8rem;
+}
+
+
+#sidebar #dismiss {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+
+#sidebar .sidebar-header {
+     position: relative;
+    padding-top: 7px;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 0px;
+    margin: auto;
+}
+
+
+#sidebar .sidebar-header p {
+     position: relative;
+     padding-top: 0px;
+     margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+
+#sidebar .sidebar-slogan {
+     position: relative;
+    padding-top: 14px;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 7px;
+    margin: auto;
+}
+
+
+#sidebar ul.components {
+    padding: 20px 0;
+}
+
+
+#sidebar .line {
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+}
+
+
+#sidebar .dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+
+/* Custom 3-deep (last) sub-menu */
+#sidebar_menu .dropdown-menu {
+left: 4px !important;
+min-width: 337px;
+max-width: 337px;
+}
+
+
+#sidebar ul.CTAs {
+    padding: 20px;
+}
+
+
+#sidebar ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+
+#sidebar a,
+#sidebar a:hover,
+#sidebar a:focus {
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+
+#sidebar a[data-bs-toggle="collapse"] {
+    position: relative;
+}
+
+
+#sidebar ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
+
+
+@media (max-width: 768px) {
+     
+    #sidebar {
+        margin-left: -350px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #secondary_wrapper {
+        width: 100%;
+    }
+    #secondary_wrapper.active {
+        width: calc(100% - 350px);
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+    
+}
+
+
+
 
 
 
