UX, revised default config, start main content area overhaul
UX, revised default config, start main content area overhaul

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -8,13 +8,7 @@ ELEMENTS
 ////////////////////////////// */
 
 
-body {
-background-color: #080808;
-color: #fff;
-}
-
-
-table, div.tabdiv {
+body, table, div.tabdiv {
 background: #202020;
 color: white;
 }
