POST-upgrade interface alert notice
POST-upgrade interface alert notice

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -160,6 +160,17 @@ CLASSES
 ////////////////////////////// */
 
 
+.alert-warning {
+margin: 15px !important;
+}
+
+
+.alert-warning div {
+margin: 25px !important;
+}
+
+
+
 .disable_click{
 pointer-events: none !important;
 }
