--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -58,7 +58,7 @@ margin-bottom: 15px;
 select {
 line-height: 15px !important;
 height: 25px !important;
-width: auto !important;
+min-width: 95px !important;
 padding: .07rem 1.4rem .07rem .5rem !important;
 }
 
@@ -393,7 +393,7 @@ font-weight: normal;
 
 .long_linebreak { 
 display: inline-block;
-max-width: 350px;
+max-width: 278px;
 white-space: normal;
 word-wrap: break-word;
 text-align: center;
@@ -472,8 +472,6 @@ margin-bottom: 2px;
 
 
 div.tabdiv {
-padding: 15px;
-min-width: 1200px;
 min-height: 150px;
 display: inline-block;
 }
@@ -552,7 +550,6 @@ padding: 8px;
 
 .loading {
 width: 100%; 
-max-width: 1200px;
 font-weight: bold;
 background-color: #5b5b5b;
 opacity: 0.75;
@@ -667,53 +664,47 @@ margin-right: 6px;
 
 #background_loading, .chart_reload {
 display: none;
+padding: 6px;
 width: 100%;
-max-width: 1200px; 
-margin-top: 45px;
 font-size: 21px;
 min-height: 23px; 
+margin: auto;
+margin-top: 3px;
+margin-bottom: 13px;
 }
 
 
 #app_loading {
 display: block;
+padding: 13px;
 width: 100%; 
-max-width: 1200px; 
 white-space: nowrap;
 font-size: 60px;
 margin: auto;
-margin-top: 60px;
-margin-bottom: 60px;
 }
 
 
 #secondary_wrapper {
     position: absolute;
-    right: 0;
-    width: calc(100% - 350px);
-     min-width: 1200px; 
-    min-height: 100vh;
      margin: auto;
-     padding: 0px;
+    min-height: 100vh;
+     padding: 20px;
     transition: all 0.3s;
+    width: calc(100% - 278px);
+    left: 278px !important;
+  overflow: scroll;
 }
 
 
 #secondary_wrapper.active {
     width: calc(100% - 60px);
-}
-
-
-#admin_wrapper, .max_1200px_wrapper {
-position: relative;
-max-width: 1200px;
+    left: 60px !important;
 }
 
 
 #content_wrapper {
 display: none;
 margin: 0px; 
-min-width: 1200px;
 }
 
 
@@ -746,11 +737,6 @@ display: none;
 font-weight: bold;
 padding: 9px;
 margin: 20px;
-}
-
-
-.tabdiv {
-width: 100% !important;
 }
 
 
@@ -811,11 +797,6 @@ table-layout:fixed;
 }
 
 
-#coins_table thead, #coins_table tbody, div.modaal-wrapper.modaal-fullscreen div.modaal-content-container {
-min-width: 1200px !important;
-}
-
-
 #header_size_warning {
 position: absolute;
     top: 3px;
@@ -866,7 +847,7 @@ display: none;
 
 
 #sidebar {
-    width: 350px;
+    width: 278px;
     position: fixed;
     top: 0;
     left: 0;
@@ -877,7 +858,7 @@ display: none;
 
 
 #sidebar.active {
-    margin-left: -350px;
+    margin-left: -278px;
 }
 
 
@@ -887,8 +868,8 @@ display: none;
     line-height: 45px;
     text-align: center;
     position: absolute;
-    top: 9px;
-    left: 5px;
+    top: 13px;
+    left: 8px;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -897,9 +878,9 @@ display: none;
 
 
 #sidebar .plus_minus {
-width: 155px;
-  margin-top: 11px;
-  margin-left: 92px;
+width: 135px;
+  margin-top: 18px;
+  margin-left: 66px;
   margin-right: 0px;
   margin-bottom: 0px;
 }
@@ -917,7 +898,7 @@ width: 155px;
 
 #sidebar label.pl_mn_lab {
 color: red;
-transform: scale(.85) translateY(0rem) translateX(0.66rem);
+transform: scale(.85) translateY(0rem) translateX(1.06rem);
 padding: 0rem;
 }
 
@@ -934,8 +915,8 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
     line-height: 45px;
     text-align: center;
     position: absolute;
-    top: 7px;
-    right: 7px;
+    top: 14px;
+    right: 10px;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -1043,7 +1024,7 @@ max-width: 337px;
 @media (max-width: 768px) {
      
     #sidebar {
-        margin-left: -350px;
+        margin-left: -278px;
     }
     #sidebar.active {
         margin-left: 0;
@@ -1052,9 +1033,11 @@ max-width: 337px;
     
     #secondary_wrapper {
         width: calc(100% - 60px);
+        left: 60px !important;
     }
     #secondary_wrapper.active {
-        width: calc(100% - 350px);
+        width: calc(100% - 278px);
+        left: 278px !important;
     }
     
     
