new title format in user / admin areas, refactoring, CSS revisions for upgrades
new title format in user / admin areas, refactoring, CSS revisions for upgrades

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -72,6 +72,12 @@ CLASSES
 ////////////////////////////// */
 
 
+.page_title {
+    background: #202020;
+    border: 4px dotted #3f3838 !important;
+}
+
+
 .pw_prompt {
     border: 3px solid white;
     background: #777575 !important;
