auto-reload countdown notice CSS styling fixes
auto-reload countdown notice CSS styling fixes

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -551,6 +551,18 @@ position: absolute; /* To set top / right below, AND backwards compatibility (if
 top: 0px;
 right: 5px;
 z-index: 5;
+border-radius: 5px;
+padding: 2px;
+}
+
+
+.countdown_notice_modal {
+display: inline;
+float: right;
+position: absolute; /* To set top / right below, AND backwards compatibility (if browser doesn't support 'sticky') */
+top: 0px;
+right: 5px;
+z-index: 5;
 position: sticky;
 position: -webkit-sticky;
 border-radius: 5px;
