--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -56,9 +56,10 @@ margin-bottom: 15px;
 
 
 select {
+appearance: none !important;  /* for hiding default arrow */
 line-height: 15px !important;
 height: 25px !important;
-width: auto !important;
+min-width: 95px !important;
 padding: .07rem 1.4rem .07rem .5rem !important;
 }
 
@@ -129,8 +130,9 @@ fieldset {
 }
 
 legend {
+    float: none !important;
     width:auto;
-    padding:6px 6px; /* To give a bit of padding on the left and right */
+    padding: 6px 6px !important; /* To give a bit of padding on the left and right */
     border-bottom:none;
     margin-bottom: 0px;
 }
@@ -158,6 +160,33 @@ margin: 0px;
 /* //////////////////////////////
 CLASSES
 ////////////////////////////// */
+
+
+.page_title {
+text-transform: uppercase;
+writing-mode: vertical-lr;
+text-orientation: upright;
+    text-align: center;
+    display: inline;
+    position: absolute;
+    margin: 0px;
+    margin-top: 3px;
+    left: 3px;
+    z-index: 2;
+    border-radius: 9px;
+    padding: 0px;
+}
+
+
+.alert-warning {
+margin: 15px !important;
+}
+
+
+.alert-warning div {
+margin: 25px !important;
+}
+
 
 
 .disable_click{
@@ -382,7 +411,7 @@ font-weight: normal;
 
 .long_linebreak { 
 display: inline-block;
-max-width: 350px;
+max-width: 258px;
 white-space: normal;
 word-wrap: break-word;
 text-align: center;
@@ -461,14 +490,9 @@ margin-bottom: 2px;
 
 
 div.tabdiv {
-padding: 15px;
-min-width: 1200px;
 min-height: 150px;
-display: inline-block;
-}
-
-
-.tabdiv {
+display: none;
+min-width: 100%;
 border-collapse: separate !important;
 }
 
@@ -512,15 +536,11 @@ text-decoration: none;
 }
 
 
-.max_full_width_wrapper {
-position: relative;
-max-width: 100%;
-}
-
-
 .full_width_wrapper {
 position: relative;
 width: 100%;
+padding-left: 60px;
+padding-right: 18px;
 }
 
 
@@ -528,8 +548,20 @@ width: 100%;
 display: inline;
 float: right;
 position: absolute; /* To set top / right below, AND backwards compatibility (if browser doesn't support 'sticky') */
-top: 20px;
-right: 0px;
+top: 0px;
+right: 5px;
+z-index: 5;
+border-radius: 5px;
+padding: 2px;
+}
+
+
+.countdown_notice_modal {
+display: inline;
+float: right;
+position: absolute; /* To set top / right below, AND backwards compatibility (if browser doesn't support 'sticky') */
+top: 0px;
+right: 5px;
 z-index: 5;
 position: sticky;
 position: -webkit-sticky;
@@ -545,7 +577,6 @@ padding: 8px;
 
 .loading {
 width: 100%; 
-max-width: 1200px;
 font-weight: bold;
 background-color: #5b5b5b;
 opacity: 0.75;
@@ -568,7 +599,8 @@ margin-right: auto;
 
 
 .chart_reload {
-top: 150px;
+top: 150px !important;
+position: absolute !important;
 }
 
 
@@ -625,6 +657,7 @@ border-radius: 6px !important;
 
 .portfolio_footer {
      text-align: left;
+     margin: auto;
 margin-top: 30px !important;
 }
 
@@ -637,6 +670,30 @@ IDs
 #primary_wrapper.wrapper {
     display: flex;
     width: 100%;
+}
+
+
+#content_wrapper {
+display: none;
+margin: 0px; 
+}
+
+
+#secondary_wrapper {
+    position: absolute;
+     margin: auto;
+    min-height: 100vh;
+     padding: 20px;
+     padding-top: 10px;
+    transition: all 0.3s;
+    width: calc(100% - 258px);
+    left: 258px !important;
+}
+
+
+#secondary_wrapper.active {
+    width: calc(100% - 60px);
+    left: 60px !important;
 }
 
 
@@ -658,54 +715,26 @@ margin-right: 6px;
 
 
 #background_loading, .chart_reload {
+position: relative;
 display: none;
+padding: 6px;
 width: 100%;
-max-width: 1200px; 
-margin-top: 45px;
 font-size: 21px;
 min-height: 23px; 
+margin: auto;
+margin-top: 3px;
+margin-bottom: 13px;
+z-index: 3;
 }
 
 
 #app_loading {
 display: block;
+padding: 13px;
 width: 100%; 
-max-width: 1200px; 
 white-space: nowrap;
 font-size: 60px;
 margin: auto;
-margin-top: 60px;
-margin-bottom: 60px;
-}
-
-
-#secondary_wrapper {
-    position: absolute;
-    right: 0;
-    width: calc(100% - 350px);
-     min-width: 1200px; 
-    min-height: 100vh;
-     margin: auto;
-     padding: 0px;
-    transition: all 0.3s;
-}
-
-
-#secondary_wrapper.active {
-    width: calc(100% - 60px);
-}
-
-
-#admin_wrapper, .max_1200px_wrapper {
-position: relative;
-max-width: 1200px;
-}
-
-
-#content_wrapper {
-display: none;
-margin: 0px; 
-min-width: 1200px;
 }
 
 
@@ -715,7 +744,7 @@ position: relative;
 float: right;
 max-width: 30%;
 margin: 0px;
-margin-right: 5px;
+margin-right: 5px !important;
 }
 
 
@@ -738,11 +767,6 @@ display: none;
 font-weight: bold;
 padding: 9px;
 margin: 20px;
-}
-
-
-.tabdiv {
-width: 100% !important;
 }
 
 
@@ -778,7 +802,6 @@ z-index: 9999999;
     text-align: left;
     min-height: 45px;
     margin: 15px;
-    margin-top: 0px;
     padding: 15px;
 font-weight: bold; 
 line-height: 35px;
@@ -800,11 +823,6 @@ margin: 20px;
 
 #coins_table{
 table-layout:fixed;
-}
-
-
-#coins_table thead, #coins_table tbody, div.modaal-wrapper.modaal-fullscreen div.modaal-content-container {
-min-width: 1200px !important;
 }
 
 
@@ -858,7 +876,7 @@ display: none;
 
 
 #sidebar {
-    width: 350px;
+    width: 258px;
     position: fixed;
     top: 0;
     left: 0;
@@ -869,7 +887,7 @@ display: none;
 
 
 #sidebar.active {
-    margin-left: -350px;
+    margin-left: -258px;
 }
 
 
@@ -879,8 +897,8 @@ display: none;
     line-height: 45px;
     text-align: center;
     position: absolute;
-    top: 9px;
-    left: 5px;
+    top: 13px;
+    left: 8px;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -889,9 +907,8 @@ display: none;
 
 
 #sidebar .plus_minus {
-width: 155px;
-  margin-top: 11px;
-  margin-left: 92px;
+  margin-top: 18px;
+  margin-left: 64px;
   margin-right: 0px;
   margin-bottom: 0px;
 }
@@ -909,14 +926,14 @@ width: 155px;
 
 #sidebar label.pl_mn_lab {
 color: red;
-transform: scale(.85) translateY(0rem) translateX(0.66rem);
+transform: scale(.85) translateY(0rem) translateX(0.5rem);
 padding: 0rem;
 }
 
 
 #sidebar #quant_font_percent {
 height: calc(1.5rem + calc(var(--bs-border-width) * 2));
-    padding-left: 1.8rem;
+    padding-left: 0.5rem;
 }
 
 
@@ -926,8 +943,8 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
     line-height: 45px;
     text-align: center;
     position: absolute;
-    top: 7px;
-    right: 7px;
+    top: 14px;
+    right: 10px;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -955,11 +972,12 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
 
 #sidebar .sidebar-slogan {
      position: relative;
-    padding-top: 14px;
+    padding-top: 5px;
     padding-left: 7px;
     padding-right: 7px;
-    padding-bottom: 7px;
+    padding-bottom: 0px;
     margin: auto;
+    font-size: 13px !important;
 }
 
 
@@ -1009,6 +1027,7 @@ max-width: 337px;
 #sidebar a,
 #sidebar a:hover,
 #sidebar a:focus {
+    font-weight: bold !important;
     text-decoration: none;
     transition: all 0.3s;
 }
@@ -1035,7 +1054,7 @@ max-width: 337px;
 @media (max-width: 768px) {
      
     #sidebar {
-        margin-left: -350px;
+        margin-left: -258px;
     }
     #sidebar.active {
         margin-left: 0;
@@ -1044,9 +1063,11 @@ max-width: 337px;
     
     #secondary_wrapper {
         width: calc(100% - 60px);
+        left: 60px !important;
     }
     #secondary_wrapper.active {
-        width: calc(100% - 350px);
+        width: calc(100% - 258px);
+        left: 258px !important;
     }
     
     
